 * Added multi-select form field to the form builder (dwasyl)
 * Improved performance of sitemap generation (Levi Adler)
 * StreamField now respects the `blank` setting; StreamBlock accepts a `required` setting (Loic Teixeira)
 * StreamBlock now accepts `min_num`, `max_num` and `block_counts` settings to control the minimum and maximum numbers of blocks (Edwar Baron, Matt Westcott)
 * Fix: FieldBlocks in StreamField now call the field's `prepare_value` method (Tim Heap)
 * Fix: Initial disabled state of InlinePanel add button is now set correctly on non-default tabs (Matthew Downey)
 * Fix: Redirects with unicode characters now work (Rich Brennan)
 * Fix: Prevent explorer view from crashing when page model definitions are missing, allowing the offending pages to be deleted (Matt Westcott)
 * Fix: Hide the userbar from printed page representation (Eugene Morozov)


1.11.1 (07.07.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: Custom display page titles defined with `get_admin_display_title` are now shown within the page explorer menu (Matt Westcott, Janneke Janssen)


1.11 (30.06.2017)
~~~~~~~~~~~~~~~~~

 * Added a new page explorer menu built with the admin API and React (Karl Hobley, Josh Barr, Thibaud Colas, Janneke Janssen, Rob Moorman, Maurice Bartnig, Jonny Scholes, Matt Westcott, Sævar Öfjörð Magnússon, Eirikur Ingi Magnusson, Harris Lapiroff, Hugo van den Berg, Olly Willans, Andy Babic, Ben Enright, Bertrand Bordage)
 * Added privacy settings for documents (Ulrich Wagner, Matt Westcott)
 * Optimised page URL generation by caching site paths in the request scope (Tobias McNulty, Matt Westcott)
 * The current live version of a page is now tracked on the revision listing view (Matheus Bratfisch)
 * Each block created in a `StreamField` is now assigned a globally unique identifier (Matt Westcott)
 * Mixcloud oEmbed pattern has been updated (Alice Rose)
 * Added `last_published_at` field to the Page model (Matt Westcott)