@@ -26,6 +26,7 @@ Other features
  * Improved performance of sitemap generation (Levi Adler)
  * StreamField now respects the ``blank`` setting; StreamBlock accepts a ``required`` setting (Loic Teixeira)
  * StreamBlock now accepts ``min_num``, ``max_num`` and ``block_counts`` settings to control the minimum and maximum numbers of blocks (Edwar Baron, Matt Westcott)
+ * Users can no longer remove their own active / superuser flags through Settings -> Users (Stein Strindhaug, Huub Bouma)
 
 Bug fixes
 ~~~~~~~~~
