@@ -143,9 +143,10 @@ def create(request):
 def edit(request, user_id):
     user = get_object_or_404(User, pk=user_id)
     can_delete = user_can_delete_user(request.user, user)
+    editing_self = request.user == user
 
     if request.method == 'POST':
-        form = get_user_edit_form()(request.POST, request.FILES, instance=user)
+        form = get_user_edit_form()(request.POST, request.FILES, instance=user, editing_self=editing_self)
         if form.is_valid():
             user = form.save()
             messages.success(request, _("User '{0}' updated.").format(user), buttons=[
@@ -155,7 +156,7 @@ def edit(request, user_id):
         else:
             messages.error(request, _("The user could not be saved due to errors."))
     else:
-        form = get_user_edit_form()(instance=user)
+        form = get_user_edit_form()(instance=user, editing_self=editing_self)
 
     return render(request, 'wagtailusers/users/edit.html', {
         'user': user,
